hilt is now working and letting the app compile and build