@@ -2,11 +2,14 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.21'
 }
 
 android {
     namespace 'com.fetch.lynnwilliam'
-    compileSdk 33
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.fetch.lynnwilliam"
@@ -34,21 +37,37 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17' //was 1.8
     }
     buildFeatures {
         compose true
+        buildConfig = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '2.0.21'
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+
+    kapt {
+        javacOptions {
+            // Open all packages accessed by kapt to eliminate IllegalAccessError
+            option("-J--add-opens", "java.base/java.util=ALL-UNNAMED")
+            option("-J--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
         }
     }
 }
@@ -66,7 +85,7 @@ dependencies {
 
         // OkHttp client
         implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
-        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinserialization_version"
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_version"
 
         // Test libraries
         testImplementation "junit:junit:$junit_version"
@@ -80,4 +99,9 @@ dependencies {
         // Debug libraries
         debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
         debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+        //Hilt DI
+        implementation 'com.google.dagger:hilt-android:2.54'
+        kapt 'com.google.dagger:hilt-android-compiler:2.54'
+        implementation "androidx.hilt:hilt-compiler:1.0.0"
 }
